--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
 colored_json = "4.1.0"
 console = "0.15.7"
 minus = { version = "5.5.1", features = ["static_output"] }
+rand = "0.8.5"
 regex = "1.10.2"
 reqwest = "0.11.22"
 serde_json = "1.0.108"
 tokio = { version = "1.35.0", features = ["full"] }
+uuid = { version = "1.6.1", features = ["v4"] }
